Update Compas + Bank
1. Compas should use 0 as favorable label
Thus, I flip the label
2. Bank was wrong about H0 H1, now fixed

--- a/AIF360-Huangrui Modified/examples/H0_Zindi.ipynb
+++ b/AIF360-Huangrui Modified/examples/H0_Zindi.ipynb
@@ -58,10 +58,8 @@
       "<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
       ": LawSchoolGPADataset will be unavailable. To install, run:\n",
       "pip install 'aif360[LawSchoolGPA]'\n",
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n",
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n"
+      "WARNING:tensorflow:From C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
@@ -196,6 +194,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -216,7 +224,23 @@
       "Theil index = 0.1150\n",
       "K = 2, budget = 1\n",
       "The Error for the test dataset is 0.1192\n",
-      "The Equal opportunity difference for the test dataset is 0.03733\n",
+      "The Equal opportunity difference for the test dataset is 0.03733\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Balanced accuracy = 0.6083\n",
       "Statistical parity difference = -0.0313\n",
       "Disparate impact = 0.5071\n",
@@ -245,6 +269,14 @@
       "The Error for the test dataset is 0.122\n",
       "The Equal opportunity difference for the test dataset is -0.04178\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -261,8 +293,9 @@
     "    lmod = pickle.load(open('experiments/zindi'+str(K)+'_sex_bmodel.pkl','rb'))[\"clf\"]\n",
     "   \n",
     "    dataset_orig_test_pred = dataset_orig_test.copy(deepcopy=True)\n",
-    "    X_test = dataset_orig_test_pred.features.copy()\n",
-    "    X_test[:,1] = [0]*X_test.shape[0]\n",
+    "    data= pickle.load(open(\"./experiments/zindi{}_sex.pkl\".format(K), \"rb\"))\n",
+    "    X_test = data[\"Xtest\"]\n",
+    "    X_test[\"sex\"] = [0]*X_test.shape[0]\n",
     "    y_test = dataset_orig_test_pred.labels\n",
     "    y_test_pred = lmod.predict(X_test)\n",
     "    dataset_orig_test_pred.labels = (y_test_pred>0.5).reshape(-1,1)\n",
