--- a/AIF360-Huangrui Modified/examples/H1_Bank.ipynb
+++ b/AIF360-Huangrui Modified/examples/H1_Bank.ipynb
@@ -58,10 +58,8 @@
       "<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
       ": LawSchoolGPADataset will be unavailable. To install, run:\n",
       "pip install 'aif360[LawSchoolGPA]'\n",
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n",
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n"
+      "WARNING:tensorflow:From C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
@@ -189,54 +187,112 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.6307\n",
-      "Statistical parity difference = 0.0745\n",
-      "Disparate impact = 2.2443\n",
-      "Average odds difference = 0.0600\n",
-      "Equal opportunity difference = 0.1044\n",
-      "Theil index = 0.1056\n",
+      "Balanced accuracy = 0.6313\n",
+      "Statistical parity difference = 0.0633\n",
+      "Disparate impact = 2.0474\n",
+      "Average odds difference = 0.0447\n",
+      "Equal opportunity difference = 0.0812\n",
+      "Theil index = 0.1054\n",
       "K = 1, budget = 1\n",
-      "The Error for the test dataset is 0.1161\n",
-      "The Equal opportunity difference for the test dataset is 0.1044\n",
-      "Balanced accuracy = 0.6558\n",
-      "Statistical parity difference = 0.1444\n",
-      "Disparate impact = 3.4114\n",
-      "Average odds difference = 0.1364\n",
-      "Equal opportunity difference = 0.2077\n",
-      "Theil index = 0.0976\n",
+      "The Error for the test dataset is 0.116\n",
+      "The Equal opportunity difference for the test dataset is 0.08124\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced accuracy = 0.6615\n",
+      "Statistical parity difference = 0.0891\n",
+      "Disparate impact = 2.3962\n",
+      "Average odds difference = 0.0995\n",
+      "Equal opportunity difference = 0.1742\n",
+      "Theil index = 0.0953\n",
       "K = 2, budget = 1\n",
-      "The Error for the test dataset is 0.1064\n",
-      "The Equal opportunity difference for the test dataset is 0.2077\n",
-      "Balanced accuracy = 0.6463\n",
-      "Statistical parity difference = 0.1207\n",
-      "Disparate impact = 3.1305\n",
-      "Average odds difference = 0.1007\n",
-      "Equal opportunity difference = 0.1424\n",
-      "Theil index = 0.1000\n",
+      "The Error for the test dataset is 0.1048\n",
+      "The Equal opportunity difference for the test dataset is 0.1742\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced accuracy = 0.6481\n",
+      "Statistical parity difference = 0.1117\n",
+      "Disparate impact = 2.9074\n",
+      "Average odds difference = 0.1366\n",
+      "Equal opportunity difference = 0.2282\n",
+      "Theil index = 0.0990\n",
       "K = 3, budget = 1\n",
-      "The Error for the test dataset is 0.1078\n",
-      "The Equal opportunity difference for the test dataset is 0.1424\n",
-      "Balanced accuracy = 0.6394\n",
-      "Statistical parity difference = 0.1586\n",
-      "Disparate impact = 4.1040\n",
-      "Average odds difference = 0.1548\n",
-      "Equal opportunity difference = 0.2255\n",
-      "Theil index = 0.1015\n",
+      "The Error for the test dataset is 0.1077\n",
+      "The Equal opportunity difference for the test dataset is 0.2282\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced accuracy = 0.6319\n",
+      "Statistical parity difference = 0.0473\n",
+      "Disparate impact = 1.8971\n",
+      "Average odds difference = -0.0036\n",
+      "Equal opportunity difference = -0.0512\n",
+      "Theil index = 0.1025\n",
       "K = 4, budget = 1\n",
-      "The Error for the test dataset is 0.1076\n",
-      "The Equal opportunity difference for the test dataset is 0.2255\n",
-      "Balanced accuracy = 0.6306\n",
-      "Statistical parity difference = 0.1114\n",
-      "Disparate impact = 3.2318\n",
-      "Average odds difference = 0.0952\n",
-      "Equal opportunity difference = 0.1357\n",
-      "Theil index = 0.1039\n",
+      "The Error for the test dataset is 0.1087\n",
+      "The Equal opportunity difference for the test dataset is -0.05119\n",
+      "Balanced accuracy = 0.6233\n",
+      "Statistical parity difference = 0.1234\n",
+      "Disparate impact = 3.4706\n",
+      "Average odds difference = 0.1483\n",
+      "Equal opportunity difference = 0.2433\n",
+      "Theil index = 0.1022\n",
       "K = 5, budget = 1\n",
-      "The Error for the test dataset is 0.1096\n",
-      "The Equal opportunity difference for the test dataset is 0.1357\n"
+      "The Error for the test dataset is 0.1101\n",
+      "The Equal opportunity difference for the test dataset is 0.2433\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\sklearn\\base.py:458: UserWarning: X has feature names, but Lasso was fitted without feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -244,18 +300,19 @@
     "experiments_info = {}\n",
     "budget = 1\n",
     "for K in range(1, 6):\n",
-    "    # dataset_orig_train= Zindi(path=\"./Huangrui/zindi/zindi_train{}.csv\".format(K),protected_attribute_names=['sex'],\n",
-    "    #             privileged_classes=[[1]])\n",
-    "    dataset_orig_test= BankDataset(path=\"./Huangrui/bank/bank_test1.csv\")\n",
+    "    dataset_orig_test= BankDataset(path=\"./Huangrui/bank/bank_test{}.csv\".format(K))\n",
     "    # #only use the budget% of the training data\n",
     "    # dataset_orig_train,_ = dataset_orig_train.split([budget], shuffle=False)\n",
     "    # Lasso linear classifier and predictions\n",
     "    lmod = pickle.load(open('experiments/bank'+str(K)+'_age_bmodel.pkl','rb'))[\"clf\"]\n",
     "   \n",
     "    dataset_orig_test_pred = dataset_orig_test.copy(deepcopy=True)\n",
-    "    X_test = dataset_orig_test_pred.features.copy()\n",
-    "    X_test[:,1] = [1]*X_test.shape[0]\n",
+    "    data= pickle.load(open(\"./experiments/bank{}_age.pkl\".format(K), \"rb\"))\n",
+    "    X_test = data[\"Xtest\"]\n",
+    "    X_test[\"age\"] = [1]*X_test.shape[0]\n",
     "    y_test = dataset_orig_test_pred.labels\n",
+    "    # print(X_test.shape)\n",
+    "    # print(y_test.shape)\n",
     "    y_test_pred = lmod.predict(X_test)\n",
     "    dataset_orig_test_pred.labels = (y_test_pred>0.5).reshape(-1,1)\n",
     "    metric_test = compute_metrics(dataset_orig_test, dataset_orig_test_pred, \n",
@@ -276,16 +333,16 @@
     {
      "data": {
       "text/plain": [
-       "{'K = 1, budget = 1': {'Error': 0.11612268328686239,\n",
-       "  'Equal opportunity difference': 0.10437635544681084},\n",
-       " 'K = 2, budget = 1': {'Error': 0.10644579301295719,\n",
-       "  'Equal opportunity difference': 0.20772396151921263},\n",
-       " 'K = 3, budget = 1': {'Error': 0.10775791372806298,\n",
-       "  'Equal opportunity difference': 0.14244008229994998},\n",
-       " 'K = 4, budget = 1': {'Error': 0.10759389863867476,\n",
-       "  'Equal opportunity difference': 0.22546293721848415},\n",
-       " 'K = 5, budget = 1': {'Error': 0.10956207971133344,\n",
-       "  'Equal opportunity difference': 0.13568370127342488}}"
+       "{'K = 1, budget = 1': {'Error': 0.11595866819747416,\n",
+       "  'Equal opportunity difference': 0.08124339654117779},\n",
+       " 'K = 2, budget = 1': {'Error': 0.10478845523122335,\n",
+       "  'Equal opportunity difference': 0.17420474262579522},\n",
+       " 'K = 3, budget = 1': {'Error': 0.10774024270252541,\n",
+       "  'Equal opportunity difference': 0.2281614528101803},\n",
+       " 'K = 4, budget = 1': {'Error': 0.1087241718596261,\n",
+       "  'Equal opportunity difference': -0.05119236883942768},\n",
+       " 'K = 5, budget = 1': {'Error': 0.11005412497949811,\n",
+       "  'Equal opportunity difference': 0.24330042313117067}}"
       ]
      },
      "execution_count": 5,
