--- a/experiment_analysis.ipynb
+++ b/experiment_analysis.ipynb
@@ -106,75 +106,75 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>120</th>\n",
+       "      <th>145</th>\n",
        "      <td>H1</td>\n",
-       "      <td>Bank</td>\n",
-       "      <td>age</td>\n",
+       "      <td>recidivism</td>\n",
+       "      <td>sex</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.116123</td>\n",
-       "      <td>0.104376</td>\n",
+       "      <td>0.262232</td>\n",
+       "      <td>0.035794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>121</th>\n",
+       "      <th>146</th>\n",
        "      <td>H1</td>\n",
-       "      <td>Bank</td>\n",
-       "      <td>age</td>\n",
+       "      <td>recidivism</td>\n",
+       "      <td>sex</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.106446</td>\n",
-       "      <td>0.207724</td>\n",
+       "      <td>0.247746</td>\n",
+       "      <td>0.083281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>122</th>\n",
+       "      <th>147</th>\n",
        "      <td>H1</td>\n",
-       "      <td>Bank</td>\n",
-       "      <td>age</td>\n",
+       "      <td>recidivism</td>\n",
+       "      <td>sex</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.107758</td>\n",
-       "      <td>0.142440</td>\n",
+       "      <td>0.325891</td>\n",
+       "      <td>0.068914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
+       "      <th>148</th>\n",
        "      <td>H1</td>\n",
-       "      <td>Bank</td>\n",
-       "      <td>age</td>\n",
+       "      <td>recidivism</td>\n",
+       "      <td>sex</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.107594</td>\n",
-       "      <td>0.225463</td>\n",
+       "      <td>0.262344</td>\n",
+       "      <td>0.046297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>124</th>\n",
+       "      <th>149</th>\n",
        "      <td>H1</td>\n",
-       "      <td>Bank</td>\n",
-       "      <td>age</td>\n",
+       "      <td>recidivism</td>\n",
+       "      <td>sex</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.109562</td>\n",
-       "      <td>0.135684</td>\n",
+       "      <td>0.247852</td>\n",
+       "      <td>0.063980</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>125 rows × 7 columns</p>\n",
+       "<p>150 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Model dataset protected_feature  budget  K     Error  Unfairness\n",
-       "0     ROC   Adult              race     1.0  1  0.256886    0.049286\n",
-       "1     ROC   Adult              race     1.0  2  0.226968    0.044753\n",
-       "2     ROC   Adult              race     1.0  3  0.216967    0.039224\n",
-       "3     ROC   Adult              race     1.0  4  0.223176    0.048689\n",
-       "4     ROC   Adult              race     1.0  5  0.215509    0.049205\n",
-       "..    ...     ...               ...     ... ..       ...         ...\n",
-       "120    H1    Bank               age     1.0  1  0.116123    0.104376\n",
-       "121    H1    Bank               age     1.0  2  0.106446    0.207724\n",
-       "122    H1    Bank               age     1.0  3  0.107758    0.142440\n",
-       "123    H1    Bank               age     1.0  4  0.107594    0.225463\n",
-       "124    H1    Bank               age     1.0  5  0.109562    0.135684\n",
+       "    Model     dataset protected_feature  budget  K     Error  Unfairness\n",
+       "0     ROC       Adult              race     1.0  1  0.256886    0.049286\n",
+       "1     ROC       Adult              race     1.0  2  0.226968    0.044753\n",
+       "2     ROC       Adult              race     1.0  3  0.216967    0.039224\n",
+       "3     ROC       Adult              race     1.0  4  0.223176    0.048689\n",
+       "4     ROC       Adult              race     1.0  5  0.215509    0.049205\n",
+       "..    ...         ...               ...     ... ..       ...         ...\n",
+       "145    H1  recidivism               sex     1.0  1  0.262232    0.035794\n",
+       "146    H1  recidivism               sex     1.0  2  0.247746    0.083281\n",
+       "147    H1  recidivism               sex     1.0  3  0.325891    0.068914\n",
+       "148    H1  recidivism               sex     1.0  4  0.262344    0.046297\n",
+       "149    H1  recidivism               sex     1.0  5  0.247852    0.063980\n",
        "\n",
-       "[125 rows x 7 columns]"
+       "[150 rows x 7 columns]"
       ]
      },
      "execution_count": 2,
@@ -335,30 +335,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     Error  Unfairness\n",
-      "protected_feature                     \n",
-      "sex                0.51551    0.057061\n",
-      "                     Error  Unfairness\n",
-      "protected_feature                     \n",
-      "sex                0.05158    0.042146\n"
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.293001    0.016894\n",
+      "H0    sex                0.269213    0.059653\n",
+      "H1    sex                0.269213    0.059653\n",
+      "ROC   sex                0.275738    0.037479\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.027125    0.012665\n",
+      "H0    sex                0.032502    0.018778\n",
+      "H1    sex                0.032502    0.018778\n",
+      "ROC   sex                0.044985    0.041786\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_3836\\1736791785.py:5: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_24604\\1301771799.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  recidivism_budget1.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+      "  recidivism_budget1.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
      ]
     }
    ],
@@ -367,83 +373,87 @@
     "recidivism = data[data['dataset'] == 'recidivism']\n",
     "#for budget == 1\n",
     "recidivism_budget1 = recidivism[recidivism['budget'] == 1]\n",
-    "recidivism_budget1.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
-    "print(recidivism_budget1.groupby(['protected_feature']).mean())\n",
-    "print(recidivism_budget1.groupby(['protected_feature']).std())\n"
+    "recidivism_budget1.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(recidivism_budget1.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(recidivism_budget1.groupby([\"Model\",'protected_feature']).std())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      Error  Unfairness\n",
-      "protected_feature                      \n",
-      "sex                0.488372    0.051684\n",
-      "                      Error  Unfairness\n",
-      "protected_feature                      \n",
-      "sex                0.145795    0.062772\n"
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.316193    0.031751\n",
+      "ROC   sex                0.296601    0.044127\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.033744    0.028268\n",
+      "ROC   sex                0.062419    0.040501\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\TEMP\\ipykernel_3836\\1408838934.py:3: SettingWithCopyWarning: \n",
+      "C:\\TEMP\\ipykernel_24604\\833082762.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  recidivism_budget01.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
+      "  recidivism_budget01.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
      ]
     }
    ],
    "source": [
     "# for budget == 0.1\n",
     "recidivism_budget01 = recidivism[recidivism['budget'] == 0.1]\n",
-    "recidivism_budget01.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
-    "print(recidivism_budget01.groupby(['protected_feature']).mean())\n",
-    "print(recidivism_budget01.groupby(['protected_feature']).std())"
+    "recidivism_budget01.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(recidivism_budget01.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(recidivism_budget01.groupby([\"Model\",'protected_feature']).std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\TEMP\\ipykernel_3836\\3946788968.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  recidivism_budget001.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      Error  Unfairness\n",
-      "protected_feature                      \n",
-      "sex                0.374929    0.103799\n",
-      "                      Error  Unfairness\n",
-      "protected_feature                      \n",
-      "sex                0.076169    0.057587\n"
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.329499    0.148834\n",
+      "ROC   sex                0.285439    0.126534\n",
+      "                            Error  Unfairness\n",
+      "Model protected_feature                      \n",
+      "EOP   sex                0.027686    0.053687\n",
+      "ROC   sex                0.045227    0.140446\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\TEMP\\ipykernel_24604\\3480561564.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  recidivism_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n"
      ]
     }
    ],
    "source": [
     "# for budget == 0.01\n",
     "recidivism_budget001 = recidivism[recidivism['budget'] == 0.01]\n",
-    "recidivism_budget001.drop([\"Model\",\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
-    "print(recidivism_budget001.groupby(['protected_feature']).mean())\n",
-    "print(recidivism_budget001.groupby(['protected_feature']).std())\n"
+    "recidivism_budget001.drop([\"dataset\", \"budget\",\"K\"], axis=1, inplace=True)\n",
+    "print(recidivism_budget001.groupby([\"Model\",'protected_feature']).mean())\n",
+    "print(recidivism_budget001.groupby([\"Model\",'protected_feature']).std())\n"
    ]
   },
   {
